Finalize homepage UI, fix minor issue with trans block tag being visible on category_selection.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -287,6 +287,10 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 0.85rem;
 }
 
+#bulleo-home-picked .bulleo-home-subsection-title {
+  margin-top: 2.5rem;
+}
+
 /* Category Selection Styling */
 .category-card {
   cursor: pointer;
